# livecut

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  requirements.txt
scripts/: live_model_console.py  test_gemini_connect.py
src/livecut/: __init__.py  agent_runtime.py  config.py  gemini_bridge.py  main.py  obs_controller.py  signal_loops.py  simple_assistant.py  tools.py  types.py  vlm_bridge.py
src/livecut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
